--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -16,13 +16,13 @@
         android:id="@+id/imgItem"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:src="@{noti.url}"/>
+        android:src="@mipmap/ic_launcher"/>
 
     <TextView
         android:id="@+id/tvPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@{noti.price}"/>
+        android:text="20 "/>
 
 </LinearLayout>
 </layout>
